Fixed layout issues with recent events page.

--- a/app/assets/stylesheets/application.css.sass
+++ b/app/assets/stylesheets/application.css.sass
@@ -94,7 +94,4 @@ div.event:not(:last-child)
 #info_panel
 	background-color: #F8F8DC
 	height: 300px
-
-.right-collapse.columns
-	padding-left: $column-gutter
-	padding-right: 0
+	margin-right: (-1 * $column-gutter)
